# cargo-pkgbuild-action

./: .gitignore  .mdlrc  Dockerfile  README.md  action.yml  entrypoint.sh  flake.nix  utils.sh
.github/linters/: markdown_lines.rb
.github/workflows/: ci.yml  linter.yml
test_proyect/: Cargo.toml
