[package]
name = "test_proyect"
description = "Test Description"
homepage = "https://github.com/SergioRibera/cargo-pkgbuild-action"
repository = "https://github.com/SergioRibera/cargo-pkgbuild-action"
authors = ["SergioRibera"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]

[package.metadata.aur]
package_name="test_proyect"
source_download="https://test.com/download/{{version}}/linux/x86_64"
depends = ["some", "dep"]
optdepends = ["optional", "dep"]
